// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extendability-using-extension-api > given an extension with a weakly typed and invalid top-bar item is enabled > renders without blowing up 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-/"
            id="top-tab-/"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-/welcome"
            id="top-tab-/welcome"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/welcome"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/welcome"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome items-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="logo svg focusable"
              data-testid="no-welcome-banners-icon"
            >
              <span
                class="icon"
              >
                <svg
                  viewBox="0 0 400 400"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
  
                  <path
                    d="M 364 200 A 164 164 0 1 0 36 200 A 164 164 0 1 0 364 200 Z M 324 200 A 124 124 0 1 0 76 200 A 124 124 0 1 0 324 200 Z"
                    fill="#00a7a0"
                    fill-rule="evenodd"
                  />
                  
  
                  <path
                    d="M 100,232 L 150,232 L 150,208 L 100,208 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 161.302,224.036 L 186.302,154.036 L 163.698,145.964 L 138.698,215.964 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 163.722,154.101 L 203.722,264.101 L 226.278,255.899 L 186.278,145.899 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 226.030,264.727 L 256.030,194.727 L 233.970,185.273 L 203.970,255.273 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 235.780,197.684 L 260.780,227.684 L 279.220,212.316 L 254.220,182.316 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 270,232 L 300,232 L 300,208 L 270,208 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <circle
                    cx="100"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="150"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="175"
                    cy="150"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="215"
                    cy="260"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="245"
                    cy="190"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="270"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="300"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  

                </svg>
                

              </span>
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your kubeconfig file and added them to the catalog, your centralized view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join us on our 
                  <a
                    class="link"
                    href="https://github.com/Nibamot/ims-scope/discussions"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Github repository
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="terminal"
                      >
                        terminal
                      </span>
                    </i>
                    <a
                      class="col-10"
                    >
                      Open a Terminal
                    </a>
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-6"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-6"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-6"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-6"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
              <span
                class="label"
              >
                Search clusters
              </span>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`extendability-using-extension-api > given an extension with top-bar items is enabled > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
          <div
            class="preventedDragging"
          >
            <div
              data-testid="some-top-bar-item"
            >
              Some-content
            </div>
          </div>
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-/"
            id="top-tab-/"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-/welcome"
            id="top-tab-/welcome"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/welcome"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/welcome"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome items-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="logo svg focusable"
              data-testid="no-welcome-banners-icon"
            >
              <span
                class="icon"
              >
                <svg
                  viewBox="0 0 400 400"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
  
                  <path
                    d="M 364 200 A 164 164 0 1 0 36 200 A 164 164 0 1 0 364 200 Z M 324 200 A 124 124 0 1 0 76 200 A 124 124 0 1 0 324 200 Z"
                    fill="#00a7a0"
                    fill-rule="evenodd"
                  />
                  
  
                  <path
                    d="M 100,232 L 150,232 L 150,208 L 100,208 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 161.302,224.036 L 186.302,154.036 L 163.698,145.964 L 138.698,215.964 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 163.722,154.101 L 203.722,264.101 L 226.278,255.899 L 186.278,145.899 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 226.030,264.727 L 256.030,194.727 L 233.970,185.273 L 203.970,255.273 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 235.780,197.684 L 260.780,227.684 L 279.220,212.316 L 254.220,182.316 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 270,232 L 300,232 L 300,208 L 270,208 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <circle
                    cx="100"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="150"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="175"
                    cy="150"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="215"
                    cy="260"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="245"
                    cy="190"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="270"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="300"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  

                </svg>
                

              </span>
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your kubeconfig file and added them to the catalog, your centralized view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join us on our 
                  <a
                    class="link"
                    href="https://github.com/Nibamot/ims-scope/discussions"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Github repository
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="terminal"
                      >
                        terminal
                      </span>
                    </i>
                    <a
                      class="col-10"
                    >
                      Open a Terminal
                    </a>
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-2"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-2"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-2"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-2"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
              <span
                class="label"
              >
                Search clusters
              </span>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`extendability-using-extension-api > given an extension with top-bar items is enabled > when the extension is disabled > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-/"
            id="top-tab-/"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-/welcome"
            id="top-tab-/welcome"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/welcome"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/welcome"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome items-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="logo svg focusable"
              data-testid="no-welcome-banners-icon"
            >
              <span
                class="icon"
              >
                <svg
                  viewBox="0 0 400 400"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
  
                  <path
                    d="M 364 200 A 164 164 0 1 0 36 200 A 164 164 0 1 0 364 200 Z M 324 200 A 124 124 0 1 0 76 200 A 124 124 0 1 0 324 200 Z"
                    fill="#00a7a0"
                    fill-rule="evenodd"
                  />
                  
  
                  <path
                    d="M 100,232 L 150,232 L 150,208 L 100,208 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 161.302,224.036 L 186.302,154.036 L 163.698,145.964 L 138.698,215.964 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 163.722,154.101 L 203.722,264.101 L 226.278,255.899 L 186.278,145.899 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 226.030,264.727 L 256.030,194.727 L 233.970,185.273 L 203.970,255.273 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 235.780,197.684 L 260.780,227.684 L 279.220,212.316 L 254.220,182.316 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 270,232 L 300,232 L 300,208 L 270,208 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <circle
                    cx="100"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="150"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="175"
                    cy="150"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="215"
                    cy="260"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="245"
                    cy="190"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="270"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="300"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  

                </svg>
                

              </span>
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your kubeconfig file and added them to the catalog, your centralized view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join us on our 
                  <a
                    class="link"
                    href="https://github.com/Nibamot/ims-scope/discussions"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Github repository
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="terminal"
                      >
                        terminal
                      </span>
                    </i>
                    <a
                      class="col-10"
                    >
                      Open a Terminal
                    </a>
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-4"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-4"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-4"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-4"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
              <span
                class="label"
              >
                Search clusters
              </span>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`extendability-using-extension-api > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <div
        class="topTabBar"
        role="tablist"
      >
        <div
          class="Tabs tabs scrollable"
        >
          <div
            class="Tab flex gap-2 items-center topTab"
            data-testid="top-tab-for-/"
            id="top-tab-/"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Overview
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Tab flex gap-2 items-center topTab active"
            data-testid="top-tab-for-/welcome"
            id="top-tab-/welcome"
            role="tab"
            tabindex="0"
          >
            <div
              class="label"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="title"
                >
                  Welcome
                </span>
                <div
                  class="close"
                >
                  <i
                    class="Icon material interactive focusable small"
                    data-testid="top-tab-close-for-/welcome"
                    tabindex="0"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                  <div
                    data-testid="tooltip-content-for-top-tab-close-for-/welcome"
                  >
                    Close tab
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome items-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="logo svg focusable"
              data-testid="no-welcome-banners-icon"
            >
              <span
                class="icon"
              >
                <svg
                  viewBox="0 0 400 400"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
  
                  <path
                    d="M 364 200 A 164 164 0 1 0 36 200 A 164 164 0 1 0 364 200 Z M 324 200 A 124 124 0 1 0 76 200 A 124 124 0 1 0 324 200 Z"
                    fill="#00a7a0"
                    fill-rule="evenodd"
                  />
                  
  
                  <path
                    d="M 100,232 L 150,232 L 150,208 L 100,208 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 161.302,224.036 L 186.302,154.036 L 163.698,145.964 L 138.698,215.964 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 163.722,154.101 L 203.722,264.101 L 226.278,255.899 L 186.278,145.899 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 226.030,264.727 L 256.030,194.727 L 233.970,185.273 L 203.970,255.273 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 235.780,197.684 L 260.780,227.684 L 279.220,212.316 L 254.220,182.316 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <path
                    d="M 270,232 L 300,232 L 300,208 L 270,208 Z"
                    fill="#00a7a0"
                  />
                  
  
                  <circle
                    cx="100"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="150"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="175"
                    cy="150"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="215"
                    cy="260"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="245"
                    cy="190"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="270"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  
  
                  <circle
                    cx="300"
                    cy="220"
                    fill="#00a7a0"
                    r="12"
                  />
                  

                </svg>
                

              </span>
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your kubeconfig file and added them to the catalog, your centralized view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join us on our 
                  <a
                    class="link"
                    href="https://github.com/Nibamot/ims-scope/discussions"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Github repository
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="terminal"
                      >
                        terminal
                      </span>
                    </i>
                    <a
                      class="col-10"
                    >
                      Open a Terminal
                    </a>
                    <i
                      class="Icon col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-0"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(110, 77, 28);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-0"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(36, 110, 28);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-0"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-0"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        >
          <div
            class="item"
          >
            <div
              class="ClusterSearch"
              data-testid="status-bar-cluster-search"
              id="status-bar-cluster-search"
            >
              <i
                class="Icon material focusable small"
              >
                <span
                  class="icon"
                  data-icon-name="search"
                >
                  search
                </span>
              </i>
              <span
                class="label"
              >
                Search clusters
              </span>
            </div>
          </div>
        </div>
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;
